--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/star.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сончи Уточкина</title>
+    <!-- Preload critical fonts -->
+    <link rel="preload" href="/fonts/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="/fonts.css">
   </head>
   <body>
